mvn support jdk17 and fix test failed